feat: transactions paginated
